--- a/staticAssets/css/admin/admin.css
+++ b/staticAssets/css/admin/admin.css
@@ -957,3 +957,4 @@ div.optionsSelector ul {
 
 .dialog p, .dialog select {margin-top:5px; margin-bottom:5px;}
 .dialog form {width:280px;}
+.clickable:hover{cursor:pointer;}
