--- a/staticAssets/css/admin/admin.css
+++ b/staticAssets/css/admin/admin.css
@@ -962,6 +962,16 @@ a.tooltip:hover span {
 	font-family:"Lucida Grande", Helvetica, Arial, sans-serif;
 ;
 }
+.ui-button {
+    cursor: pointer;
+    display: inline-block;
+    margin-right: 0.1em;
+    overflow: visible;
+    padding: 0;
+    position: relative;
+    text-align: center;
+    text-decoration: none !important;
+}
 table.listing-grid a.button {color:#fff;}
 #actionButtons {
     background: url(../../images/admin.ui.rule_dotted_big.gif) repeat-x scroll 0 0 transparent;
@@ -985,3 +995,58 @@ div.optionsSelector ul {
 .dialog p, .dialog select {margin-top:5px; margin-bottom:5px;}
 .dialog form {width:280px;}
 .clickable:hover{cursor:pointer;}
+
+.ui-dialog {
+    border: 6px solid #666666;
+    border-radius: 4px;
+    overflow: hidden;
+    padding: 0.2em;
+    position: absolute;
+}
+.ui-dialog .ui-dialog-titlebar {
+	background:none;
+	border:none;
+}
+.ui-dialog .ui-dialog-title {
+    float: left;
+    font-size: 20px;
+    margin: 0.1em 16px 0.1em 0;
+}
+.ui-dialog .ui-dialog-titlebar-close {
+    height: 18px;
+    margin: -10px 0 0;
+    padding: 1px;
+    position: absolute;
+    right: 0.3em;
+    top: 50%;
+    width: 19px;
+}
+.ui-dialog .ui-dialog-titlebar-close span {
+    background: url("../../images/admin.ui.remov_16.png") no-repeat scroll 50% 50% transparent;
+    height: 16px;
+    width: 16px;
+}
+.ui-dialog .ui-dialog-buttonpane button {
+    cursor: pointer;
+    float: right;
+    line-height: 1.4em;
+    margin: 0.5em 0.4em 0.5em 0;
+    overflow: visible;
+    padding: 0.2em 0.6em 0.3em;
+    width: auto;
+	background: url("../../images/admin.ui-bg_highlight-hard_90_f5f5f5_1x100.png") repeat-x scroll 50% 50% #F5F5F5;
+    border: 1px solid #DBDBDB;
+    color: #636261;
+	height:auto;
+    font-weight: normal;
+}
+.ui-dialog .ui-dialog-buttonpane button:hover {
+	background: url("../../images/admin.ui-bg_highlight-hard_90_dadada_1x100.png") repeat-x scroll 50% 50% #F5F5F5;
+}
+.ui-dialog-content p {
+    color: #666666;
+    font-size: 13px;
+}
+.ui-dialog .ui-icon-alert {
+    display: none;
+}
