Added "Select a rate" option to SKU grid price group dialog. Added "new amount" logic to SKU specific price group override. Restructured SKU Price Group dialog. Added actual override amount into SKU grid.

--- a/staticAssets/css/admin/admin.css
+++ b/staticAssets/css/admin/admin.css
@@ -979,4 +979,5 @@ div.optionsSelector ul {
 
 .dialog p, .dialog select {margin-top:5px; margin-bottom:5px;}
 .dialog form {width:280px;}
+.dialog dl dt{width:100px; font-weight:bold;}
 .clickable:hover{cursor:pointer;}
