--- a/staticAssets/css/admin/admin.css
+++ b/staticAssets/css/admin/admin.css
@@ -1063,3 +1063,13 @@ div.optionsSelector ul {
 .ui-dialog .ui-icon-alert {
     display: none;
 }
+
+/* Custom input box sizes for vendor order item / vendor order receiver items */
+#editVendorOrderProductAssignment input, #detailVendorOrderReceiver input{width:60px;}
+
+/* Hide "close" bar on the vendor order dialog */
+.vendorOrderItemDialog > div{display:none;}
+
+/* Handle the diming of data tables. The dim class will be added by javascript when a row is dimmed out. */
+.dim td{background-color:#ced6df !important;}
+.dim.alt td{background-color:#dddfe0 !important;}
