--- a/staticAssets/css/admin/admin.css
+++ b/staticAssets/css/admin/admin.css
@@ -1065,7 +1065,7 @@ div.optionsSelector ul {
 }
 
 /* Custom input box sizes for vendor order item / vendor order receiver items */
-#editVendorOrderProductAssignment input, #detailStockReceiver input{width:60px;}
+#editVendorOrderProductAssignment input, #detailStockReceiver input, #orderReturnEdit input{width:60px;}
 
 /* Hide "close" bar on the vendor order dialog */
 .vendorOrderItemDialog > div{display:none;}
