Wrapped up comment implimentation

--- a/staticAssets/css/admin/admin.css
+++ b/staticAssets/css/admin/admin.css
@@ -1070,8 +1070,8 @@ div.optionsSelector ul {
 /* Hide "close" bar on the vendor order dialog */
 .vendorOrderItemDialog > div, .stockAdjustmentItemsDialog > div{display:none;}
 
-#detailStockReceiver tbody tr.alt td.highlighted{background-color:#f8ff34;}
-#detailStockReceiver tbody td.highlighted {background-color:#dbe152;}
+.listing-grid tr.alt td.highlighted{background-color:#f8ff34;}
+.listing-grid td.highlighted {background-color:#dbe152;}
 /*#detailStockReceiver tbody .highlighted th{url("../../images/admin.ui.listing-grid_th_bg.jpg") repeat-x scroll left bottom #FFFEFE}*/
 
 
