Getting Hierarchy list dialed in.

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -46,7 +46,36 @@ body {
 			}
 		}
 	}
-	
+	.depth1 {
+		margin-left:20px;
+	}
+	.depth2 {
+		margin-left:40px;
+	}
+	.depth3 {
+		margin-left:60px;
+	}
+	.depth4 {
+		margin-left:80px;
+	}
+	.depth5 {
+		margin-left:100px;
+	}
+	.depth6 {
+		margin-left:120px;
+	}
+	.depth7 {
+		margin-left:140px;
+	}
+	.depth8 {
+		margin-left:160px;
+	}
+	.depth9 {
+		margin-left:180px;
+	}
+	.depth10 {
+		margin-left:200px;
+	}
 }
 
 .modal {
