--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -81,3 +81,44 @@ body {
 .modal {
 	display:none;	
 }
+
+.control-group {
+	margin-bottom: 5px !important;
+	.control-label {
+		font-weight:bold;
+		text-align:left;
+	}
+}
+
+.dl-horizontal {
+	dt {
+		padding-top:5px;
+		margin-bottom:10px;
+		width:140px;
+		text-align:left;
+	}
+	dd {
+		padding-top:5px;
+		margin-bottom:10px;
+		margin-left: 160px;
+	}
+	margin-top:0px;
+	margin-bottom:20px;
+}
+
+.tabbable {
+	padding-top:20px;
+	border-top:1px solid #dddddd;
+	.tabsLeft {
+		float:left;
+		width:18%;
+		margin-right:2%;
+		.nav-tabs {
+			width:100%;
+		}
+	}
+	.tabsRight {
+		float:left;
+		width:80%;
+	}
+}
