--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -85,7 +85,7 @@ body {
 .control-group {
 	margin-bottom: 5px !important;
 	.control-label {
-		font-weight:bold;
+		font-weight:normal;
 		text-align:left;
 	}
 }
@@ -96,6 +96,7 @@ body {
 		margin-bottom:10px;
 		width:140px;
 		text-align:left;
+		font-weight:normal;
 	}
 	dd {
 		padding-top:5px;
