--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -127,3 +127,7 @@ body {
 input[type="text"], input[type="password"], textarea, select {
 	color: #333333;
 }
+
+#ui-timepicker-div {
+	clip: auto !important;
+}
