added client side validation.

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -131,3 +131,10 @@ input[type="text"], input[type="password"], textarea, select {
 #ui-timepicker-div {
 	clip: auto !important;
 }
+
+input.error {
+	border: 1px solid #DA4F49;
+}
+label.error {
+	color:#DA4F49;
+}
