Updates to vendor orders, and resolves issue #517

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -132,7 +132,7 @@ input[type="text"], input[type="password"], textarea, select {
 	clip: auto !important;
 }
 
-input.error {
+input.error, select.error {
 	border: 1px solid #DA4F49;
 }
 label.error {
