Setup Listing Display HTML structure to work with Select, Multiselect, Sort & Expand.

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -141,3 +141,20 @@ label.error {
 .form-horizontal {
 	margin-bottom: 0px;
 }
+[class^="slatwall-ui-"],[class*=" slatwall-ui-"]{
+	display:inline-block;
+	width:16px;
+	height:16px;
+	line-height:16px;
+	vertical-align:text-top;
+	background-image:url("../images/ui-sprite.png");
+	background-position:0px 0px;
+	background-repeat:no-repeat;
+	margin-right:.3em;
+	}
+[class^="slatwall-ui-"]:last-child,[class*=" slatwall-ui-"]:last-child{margin-left:0;}
+.slatwall-ui-checkbox {background-position:0px 0px;}
+.slatwall-ui-checkbox-partial {background-position:0px -16px;}
+.slatwall-ui-checkbox-checked {background-position:0px -32px;}
+.slatwall-ui-radio {background-position:0px -48px;}
+.slatwall-ui-radio-checked {background-position:0px -64px;}
