updated the sprites to add a 'disabled' option.

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -141,6 +141,11 @@ label.error {
 .form-horizontal {
 	margin-bottom: 0px;
 }
+.disabled {
+	[class^="slatwall-ui-"] {
+		background-position-x:-16px !important;
+	}
+}
 [class^="slatwall-ui-"],[class*=" slatwall-ui-"]{
 	display:inline-block;
 	width:16px;
@@ -158,3 +163,4 @@ label.error {
 .slatwall-ui-checkbox-checked {background-position:0px -32px;}
 .slatwall-ui-radio {background-position:0px -48px;}
 .slatwall-ui-radio-checked {background-position:0px -64px;}
+
