Added some hint and back support

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -164,3 +164,9 @@ label.error {
 .slatwall-ui-radio {background-position:0px -48px;}
 .slatwall-ui-radio-checked {background-position:0px -64px;}
 
+.hint {
+	i {
+		opacity: .2;
+		margin-top:1px;
+	}
+}
