Updated Shipping Method Rates, and some css updates.

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -9,12 +9,24 @@ body {
 }
 
 .actionnav {
+	padding:2px;
 	h1 {
 		font-size:14px;
-		padding:5px;
-		margin:0px;
+		padding:0px;
+		margin:5px 0px 3px 10px;
+		line-height:1em;
+	}
+	h1.noSub {
+		margin-top:14px;
+	}
+	h2 {
+		font-size:12px;
+		padding:0px;
+		margin:0px 0px 3px 10px;
+		line-height:1em;
 	}
 	.btn-toolbar {
+		margin: 6px 6px 4px 0px;
 		text-align:right;
 		* {
 			text-align:left;
