Updates to the processing of order fulfillments

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -136,6 +136,10 @@ body {
 	}
 }
 
+.highlight-ltblue {
+	background-color:#D6E7FF !important;
+}
+
 input[type="text"], input[type="password"], textarea, select {
 	color: #333333;
 }
