Added the data-emptyvalue functionality

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -162,6 +162,10 @@ label.error {
 		background-position-x:-16px !important;
 	}
 }
+.emptyvalue {
+	font-style:italic;
+	color:#cdcdcd !important;
+}
 [class^="slatwall-ui-"],[class*=" slatwall-ui-"]{
 	display:inline-block;
 	width:16px;
