--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -34,6 +34,23 @@ body {
 	}
 }
 
+#search-results {
+	position:relative;
+	width:100%;
+	height:400px;
+	background-color:#F5F5F5;
+	margin-bottom:20px;
+	margin-top:-410px;
+	padding-top:50px;
+}
+.search-close {
+	margin-bottom:10px;
+	.text {
+		font-size:12px;
+	}
+}
+
+
 .table {
 	th, td {
 		white-space:nowrap;
