--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -37,18 +37,22 @@ body {
 #search-results {
 	position:relative;
 	width:100%;
-	height:400px;
 	background-color:#F5F5F5;
-	margin-bottom:20px;
-	margin-top:-410px;
-	padding-top:50px;
-}
-.search-close {
-	margin-bottom:10px;
-	.text {
-		font-size:12px;
+	margin-bottom:30px;
+	margin-top:-500px;
+	padding-top:60px;
+	padding-bottom:0px;
+	.result-bucket {
+		height:220px;
+	}
+	.search-close {
+		margin-bottom:10px;
+		.text {
+			font-size:12px;
+		}
 	}
 }
+
 
 
 .table {
