More Misc CSS/JS fixes

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -44,6 +44,10 @@ body {
 	padding-bottom:0px;
 	.result-bucket {
 		height:220px;
+		ul.nav li {
+			white-space:nowrap;
+			overflow:hidden;
+		}
 	}
 	.search-close {
 		margin-bottom:10px;
