Working on table CSS

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -62,6 +62,7 @@ body {
 .table {
 	th, td {
 		white-space:nowrap;
+		font-size:12px;
 		div.btn-group {
 			width:auto;
 			height:13px;
@@ -69,6 +70,9 @@ body {
 	}
 	th.primary, td.primary {
 		width:100%;
+	}
+	td.primary {
+		white-space:normal;
 	}
 	th.wrap, td.wrap {
 		white-space:normal;
