Updates to the modal window and a few other JS/CSS things

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -34,16 +34,21 @@ body {
 	}
 }
 
+h4 {
+	margin-bottom:5px;
+}
+
+
 #search-results {
 	position:relative;
 	width:100%;
 	background-color:#F5F5F5;
-	margin-bottom:30px;
+	margin-bottom:25px;
 	margin-top:-500px;
 	padding-top:60px;
 	padding-bottom:0px;
 	.result-bucket {
-		height:220px;
+		height:225px;
 		ul.nav li {
 			white-space:nowrap;
 			overflow:hidden;
