Updated Smart List search

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -26,10 +26,18 @@ body {
 		line-height:1em;
 	}
 	.btn-toolbar {
-		margin: 6px 6px 4px 0px;
+		margin: 5px 5px 5px 0px;
+		height: 30px;
 		text-align:right;
 		* {
 			text-align:left;
+		}
+		.listing-search {
+			top:-10px;
+			margin-bottom: 0px;
+			input {
+				margin:0px;
+			}
 		}
 	}
 }
