More search updates

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -32,7 +32,7 @@ body {
 		* {
 			text-align:left;
 		}
-		.listing-search {
+		.action-bar-search {
 			top:-10px;
 			margin-bottom: 0px;
 			input {
