Fixes issues related to Pull Request #596

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -241,7 +241,7 @@ label.error {
 	max-height:140px;
 	padding-bottom:10px;
 }
-.btn-group.open .dropdown-menu{
+.dropdown-menu-right{
 	left: auto;
 	right: 0;
 }
