--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -4,6 +4,10 @@
  * 
  */
 
+
+/* Slatwall Orange: f78f1e */
+
+
 body {
 	padding-bottom:40px;
 }
@@ -245,3 +249,76 @@ label.error {
 	left: auto;
 	right: 0;
 }
+
+
+.ui-datepicker-header {
+	text-align:center !important;
+}
+
+.ui-timepicker-div {
+	dt, dd {
+		font-size:12px !important;
+		padding-left:5px;
+	}
+}
+
+.btn-primary{
+	background-color:#fc770d;
+	background-image:-moz-linear-gradient(top, #f78f1e, #ff6600);
+	background-image:-ms-linear-gradient(top, #f78f1e, #ff6600);
+	background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#f78f1e), to(#ff6600));
+	background-image:-webkit-linear-gradient(top, #f78f1e, #ff6600);
+	background-image:-o-linear-gradient(top, #f78f1e, #ff6600);
+	background-image:linear-gradient(top, #f78f1e, #ff6600);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f78f1e', endColorstr='#ff6600', GradientType=0);
+	border-color:#ff6600 #ff6600 #003580;border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	filter:progid:dximagetransform.microsoft.gradient(enabled=false);
+}
+.btn-primary:hover,.btn-primary:active,.btn-primary.active,.btn-primary.disabled,.btn-primary[disabled]{
+	background-color:#ff6600;
+}
+.btn-primary:active,.btn-primary.active{	
+	background-color:#004099 \9;
+}
+
+.btn-success{
+	background-color:#2e865b;
+	background-image:-moz-linear-gradient(top, #16b350, #077430);
+	background-image:-ms-linear-gradient(top, #16b350, #077430);
+	background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#16b350), to(#077430));
+	background-image:-webkit-linear-gradient(top, #16b350, #077430);
+	background-image:-o-linear-gradient(top, #16b350, #077430);
+	background-image:linear-gradient(top, #16b350, #077430);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#16b350', endColorstr='#077430', GradientType=0);
+	border-color:#077430 #077430 #387038;border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	filter:progid:dximagetransform.microsoft.gradient(enabled=false);
+}
+.btn-success:hover,.btn-success:active,.btn-success.active,.btn-success.disabled,.btn-success[disabled]{
+	background-color:#077430;
+}
+.btn-success:active,.btn-success.active{
+	background-color:#408140 \9;
+}
+
+.navbar .nav .active > a, .navbar .nav .active > a:hover {background-color:#ffffff; color:#333333;}
+
+.navbar .dropdown-menu li > a:hover, .navbar .dropdown-menu .active > a, .navbar .dropdown-menu .active > a:hover {background-color:#f78f1e;}
+
+.dropdown .dropdown-toggle {
+	text-shadow: #444444;
+}
+
+.dropdown.open .dropdown-toggle {
+	background:none;
+	color:#084b65;
+}
+
+.icon-red{background-image:url("../img/glyphicons-halflings-red.png");}
+	
+	
+	
+	
+	
+	
+
+
