--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -149,6 +149,11 @@ h4 {
 	.control-label {
 		font-weight:normal;
 		text-align:left;
+		height: 19px;
+		width:180px;
+	}
+	.controls {
+		margin-left:180px;
 	}
 }
 
@@ -156,19 +161,23 @@ h4 {
 	dt {
 		padding-top:5px;
 		margin-bottom:10px;
-		width:140px;
+		width:180px;
 		text-align:left;
 		font-weight:normal;
+		height: 19px;
 	}
 	dd {
 		padding-top:5px;
 		margin-bottom:10px;
-		margin-left: 160px;
+		margin-left: 186px;
+		height: 19px;
 	}
 	margin-top:0px;
 	margin-bottom:20px;
 }
-
+dl.dl-horizontal {
+	margin-bottom:25px;
+}
 .tabbable {
 	padding-top:20px;
 	border-top:1px solid #dddddd;
