Minor UI change.

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -206,6 +206,11 @@ input[type="text"], input[type="password"], textarea, select {
 	color: #333333;
 }
 
+textarea {
+	width:400px;
+	height:300px;
+}
+
 #ui-timepicker-div {
 	clip: auto !important;
 }
