--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -167,6 +167,10 @@ h4 {
 	}
 	margin-top:0px;
 	margin-bottom:20px;
+	div {
+		padding:0px;
+		margin:0px;
+	}
 }
 dl.dl-horizontal {
 	margin-bottom:25px;
