--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -45,6 +45,17 @@ h4 {
 	padding:5px 15px 0px 15px;
 }
 
+.range-filter {
+	padding:5px 15px 0px 15px;
+	label {
+		font-size:11px;
+		font-weight:bold;
+	}
+	input {
+		font-size:11px;
+	}
+}
+
 #search-results {
 	position:relative;
 	width:100%;
