Generic listing fixes.

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -343,6 +343,18 @@ label.error {
 .navbar .dropdown-menu li.active > a:hover, .navbar .dropdown-menu li > a:hover {background-color:#f78f1e; color:#ffffff;}	
 .navbar .dropdown-menu li.active > a {background-color:#ffffff; color:#333333;}
 
-.pagination .next, .pagination .prev {
-	font-size: 18px;
+.pagination {
+	.next, .prev {
+		font-size: 18px;
+	}
+	.details {
+		position:relative;
+		top:-1px;
+		font-size:10px;
+		font-weight:bold;
+		color:#999999;
+	}
+	.show-option {
+		display: none;
+	}
 }
