Setup Multi-select to be able to use hierarchy

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -344,6 +344,8 @@ label.error {
 .navbar .dropdown-menu li.active > a {background-color:#ffffff; color:#333333;}
 
 .pagination {
+	margin-top:-15px;
+	float: right;
 	.next, .prev {
 		font-size: 18px;
 	}
