Resolves Issue #211 and Issue #631.  Also is a partial fix for issue #630

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -216,6 +216,11 @@ textarea {
 	height:250px;
 }
 
+textarea.processComment {
+	width:180px;
+	height:60px;
+}
+
 #ui-timepicker-div {
 	clip: auto !important;
 }
