--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -359,6 +359,8 @@ label.error {
 		top:-1px;
 		font-size:10px;
 		font-weight:bold;
+		
+		line-height:1em;
 		color:#999999;
 	}
 	.show-option {
