--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -234,32 +234,40 @@ label.error {
 .form-horizontal {
 	margin-bottom: 0px;
 }
-.disabled {
-	[class^="slatwall-ui-"] {
-		background-position-x:-16px !important;
-	}
-}
+
 .emptyvalue {
 	font-style:italic;
 	color:#cdcdcd !important;
 }
-[class^="slatwall-ui-"],[class*=" slatwall-ui-"]{
+[class^="slatwall-ui-"], [class*=" slatwall-ui-"]{
 	display:inline-block;
 	width:16px;
 	height:16px;
 	line-height:16px;
 	vertical-align:text-top;
 	background-image:url("../images/ui-sprite.png");
-	background-position:0px 0px;
 	background-repeat:no-repeat;
 	margin-right:.3em;
 	}
 [class^="slatwall-ui-"]:last-child,[class*=" slatwall-ui-"]:last-child{margin-left:0;}
-.slatwall-ui-checkbox {background-position:0px 0px;}
-.slatwall-ui-checkbox-partial {background-position:0px -16px;}
-.slatwall-ui-checkbox-checked {background-position:0px -32px;}
-.slatwall-ui-radio {background-position:0px -48px;}
-.slatwall-ui-radio-checked {background-position:0px -64px;}
+
+a:hover.disabled {cursor: default;}
+
+i.slatwall-ui-checkbox {background-position:0px 0px;}
+a.disabled > i.slatwall-ui-checkbox {background-position:-16px 0px !important; cursor:pointer;}
+
+i.slatwall-ui-checkbox-partial {background-position:0px -16px;}
+a.disabled > i.slatwall-ui-checkbox-partial {background-position:-16px -16px !important; cursor:pointer;}
+
+i.slatwall-ui-checkbox-checked {background-position:0px -32px;}
+a.disabled > i.slatwall-ui-checkbox-checked {background-position:-16px -32px !important; cursor:pointer;}
+
+i.slatwall-ui-radio {background-position:0px -48px;}
+a.disabled > i.slatwall-ui-radio {background-position:-16px -48px !important; cursor:pointer;}
+
+i.slatwall-ui-radio-checked {background-position:0px -64px;}
+a.disabled > i.slatwall-ui-radio-checked {background-position:-16px -64px !important; cursor:pointer;}
+
 
 .hint {
 	i {
