Fixes search css issue when no buttons are in action bar.

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -28,9 +28,23 @@ body {
 			text-align:left;
 		}
 		.action-bar-search {
-			top:-10px;
+			background-color: transparent;
+			color: #333;
+			display: inline-block;
+			font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+			font-size: 13px;
+			height: 28px;
+			line-height: 18px;
+			margin-bottom: 0px;
+			margin-left: 5px;
+			margin-right: 0px;
+			margin-top: 0px;
+			position: relative;
+			text-align: left;
 			margin-bottom: 0px;
 			input {
+				position:absolute;
+				right:0px;
 				margin:0px;
 			}
 		}
