I believe this resolves issue #688

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -397,3 +397,5 @@ a.disabled > i.slatwall-ui-radio-checked {background-position:-16px -64px !impor
 .negative {
 	color: red;
 }
+
+a.hint {float:right;margin-right:5px;}
