--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -10,6 +10,8 @@
 
 body {
 	padding-bottom:40px;
+	height:100%;
+    min-height:100%;
 }
 
 .actionnav {
@@ -156,10 +158,8 @@ h4 {
 }
 
 .modal {
-	display:none;	
-}
-.modal-body {
-	max-height:550px;
+	display:none;
+	max-width:80%;
 }
 
 .control-group {
