--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -13,6 +13,14 @@ body {
 	height:100%;
     min-height:100%;
 }
+.navbar .brand {
+	padding:6px 10px 6px 20px;
+}
+
+.navbar .brand-two {
+	margin:0px 0px 0px 0px;
+	padding: 8px 10px 12px 10px;
+}
 
 .actionnav {
 	padding:2px;
