--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -196,7 +196,7 @@ h4 {
 		padding-top:5px;
 		margin-bottom:10px;
 		margin-left: 186px;
-		height: 19px;
+		min-height: 19px;
 	}
 	margin-top:0px;
 	margin-bottom:20px;
